# domuscura

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.e2e  Makefile  README.md  docker-compose.yml  domuscura.md  home_maintenance_design_notes_v2.md  home_maintenance_schema_v2.sql  home_maintenance_seed_data_v2.sql  justfile  manage.py  pyproject.toml
.claude/skills/mine.audit/: SKILL.md
.github/workflows/: ci.yml
design/: hcd-review-2026-03-06.md  ux-review-2026-03-06.md
design/critiques/2026-03-06-ui/: critique.md
design/interface-design/: system.md
domuscura/: settings.py  urls.py  wsgi.py
maintenance/: admin.py  forms.py  models.py  urls.py
maintenance/management/commands/: seed_data.py
maintenance/migrations/: 0001_initial.py  0002_remove_null_from_text_fields.py  0003_frequency_model.py  0004_migrate_frequency_data.py  0005_schedule_frequency_cleanup.py  0006_remove_season_hint.py
maintenance/static/css/: app.css
maintenance/templates/: base.html  dashboard.html
maintenance/templates/assets/: detail.html  form.html  list.html
maintenance/views/: asset.py  category.py  dashboard.py  frequency.py  issue.py  location.py  project.py  schedule.py  spending.py  work_log.py
tests/: conftest.py  test_forms.py  test_models.py  test_seed_data.py  test_views_assets.py  test_views_dashboard.py  test_views_issues.py  test_views_projects.py  test_views_schedules.py  test_views_spending.py  test_views_work_log.py
tests/e2e/: conftest.py  test_crud.py  test_dashboard.py  test_navigation.py  test_schedules.py
(+23 files in other folders)
